节点注册信息存储改为db