@@ -9,11 +9,10 @@ import cn.com.vortexa.script_node.service.BotApi;
 import cn.com.vortexa.common.constants.BotJobType;
 import cn.com.vortexa.common.dto.Result;
 import cn.com.vortexa.common.entity.AccountContext;
-import cn.com.vortexa.common.exception.BotInitException;
-import cn.com.vortexa.common.exception.BotStartException;
+import io.netty.handler.codec.http.DefaultHttpHeaders;
 
-import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
 
 /**
  * @author helei
@@ -22,7 +21,7 @@ import java.util.List;
 @BotApplication(name = "optim_ai", configParams = {OptimAIBot.TWO_CAPTCHA_API_KEY})
 public class OptimAIBot extends AutoLaunchBot<OptimAIBot> {
 
-    private static final String WS_CONNECT_URL = "wss://ws.optimai.network";
+    private static final String WS_CONNECT_URL = "wss://ws.optimai.network/?token=%s";
     public static final String TWO_CAPTCHA_API_KEY = "two_captcha_api_key";
     public static final String PASSWORD_KEY = "password";
 
@@ -54,30 +53,68 @@ public class OptimAIBot extends AutoLaunchBot<OptimAIBot> {
         return optimAIAPI.login(accountContext);
     }
 
+    @BotMethod(jobType = BotJobType.QUERY_REWARD, concurrentCount = 10)
+    public Result queryReword(AccountContext accountContext, List<AccountContext> sameAC) {
+        return optimAIAPI.queryReword(accountContext);
+    }
+
+    @BotMethod(jobType = BotJobType.TIMED_TASK, intervalInSecond = 60 * 60, concurrentCount = 5)
+    public void tokenRefresh(AccountContext accountContext) {
+        Result result = optimAIAPI.refreshAccessToken(accountContext);
+        if (result.getSuccess()) {
+            logger.info(accountContext.getSimpleInfo() + " refresh token success");
+        } else {
+            logger.error(accountContext.getSimpleInfo() + " refresh token error, " + result.getErrorMsg());
+        }
+    }
+
     @BotMethod(
             jobType = BotJobType.WEB_SOCKET_CONNECT,
             intervalInSecond = WS_RECONNECT_INTERVAL_SECOND,
             bowWsConfig = @BotWSMethodConfig(
+                    wsUnlimitedRetry = true,
                     isRefreshWSConnection = true,
-                    reconnectLimit = 4,
+                    reconnectLimit = -1,
                     heartBeatIntervalSecond = 15 * 60,
-                    nioEventLoopGroupThreads = 2,
-                    wsConnectCount = 20
+                    nioEventLoopGroupThreads = 1,
+                    wsConnectCount = 50
             )
     )
     public OptimAIWSClient buildKeepAliveWSClient(AccountContext accountContext) {
-        OptimAIWSClient client = new OptimAIWSClient(accountContext, WS_CONNECT_URL);
-//        client.set
+        String simpleInfo = accountContext.getSimpleInfo();
+
+        String wsToken = accountContext.getParam(OptimAIAPI.WS_TOKEN);
+        if (wsToken == null) {
+            logger.warn(simpleInfo + "ws token is empty... try to generate");
+            try {
+                wsToken = optimAIAPI.registryNode2GetWSToken(accountContext);
+                accountContext.setParam(OptimAIAPI.WS_TOKEN, wsToken);
+            } catch (Exception e) {
+                logger.error(simpleInfo + " generate ws token error", e);
+                throw new RuntimeException("generate ws token error");
+            }
+        }
+
+        OptimAIWSClient client = new OptimAIWSClient(this, accountContext, WS_CONNECT_URL.formatted(wsToken));
+
+        DefaultHttpHeaders httpHeaders = new DefaultHttpHeaders();
+        for (Map.Entry<String, String> entry : accountContext.getBrowserEnv().generateHeaders().entrySet()) {
+            httpHeaders.add(entry.getKey(), entry.getValue());
+        }
+
+        httpHeaders.add("Accept-Language", "en-US,en;q=0.9,id;q=0.8");
+        httpHeaders.add("Cache-Control", "no-cache");
+        httpHeaders.add("Connection", "Upgrade");
+        httpHeaders.add("Host", "ws.optimai.network");
+        httpHeaders.add("Origin", "chrome-extension://njlfcjdojmopagogfpjgcbnpmiknapnd");
+        httpHeaders.add("Pragma", "no-cache");
+        httpHeaders.add("Sec-WebSocket-Extensions", "permessage-deflate; client_max_window_bits");
+        httpHeaders.add("Sec-WebSocket-Key", "YlDqUSX4RQ86eTGWUR1Ynw===");
+        httpHeaders.add("Sec-WebSocket-Version", "13");
+        httpHeaders.add("Upgrade", "websocket");
+
+        client.setHeaders(httpHeaders);
+
         return client;
-    }
-
-    public static void main(String[] args) throws BotStartException, BotInitException {
-        List<String> list = new ArrayList<>(List.of(args));
-
-        list.add("--vortexa.botKey=optimai_test");
-        list.add("--vortexa.accountConfig.configFilePath=optimai_google.xlsx");
-        list.add("--add-opens java.base/java.lang=ALL-UNNAMED");
-
-//        ScriptAppLauncher.launch(OptimAIBot.class, list.toArray(new String[0]));
     }
 }
